feat: impl module referral code

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,9 @@ NEST_PORT=3000
 # DATABASE MONGODB
 MONGO_URL=localhost
 MONGO_DB_NAME=affiliate
+
+#REFERAL_CODE
+MIN_LENGTH_REFERRAL_CODE=3
+MAX_LENGTH_REFERRAL_CODE=15
+
+DEFAULT_REFERRAL_CODE_RATE=0.2
